NULL = 
INCLUDES = \
	-I$(top_srcdir)/libgdome 		\
	-I$(top_srcdir)/libgdome/gdomecore 	\
	-I$(top_srcdir)/libgdome/events 	\
	-I$(top_srcdir)/libgdome/xpath 		\
	$(LIBXML_CFLAGS) 			\
	$(GLIB_CFLAGS) 				\
	$(NULL)

noinst_LTLIBRARIES = libgdomecore.la

libgdomecore_la_SOURCES = 		\
	gdome-xml-xmldtdutil.c		\
        gdome-xml-xmlmemory.c		\
	gdome-xml-str.c			\
	gdome-xml-text.c		\
	gdome-xml-comment.c		\
	gdome-xml-cdata.c		\
	gdome-xml-attribute.c		\
	gdome-xml-element.c		\
	gdome-xml-document.c		\
	gdome-xml-documentt.c		\
	gdome-xml-documentf.c		\
	gdome-xml-domimpl.c		\
	gdome-xml-nnodem.c    	        \
	gdome-xml-nodel.c		\
	gdome-xml-node.c		\
	gdome-xml-pi.c			\
	gdome-xml-notation.c		\
	gdome-xml-entity.c		\
        gdome-xml-xmlutil.c		\
        gdome-xml-cdatas.c		\
        gdome-xml-entityref.c		\
        gdome-xml-xpns.c		\
	$(NULL)		

EXTRA_DIST =				\
	gdome-xml-xmldtdutil.h		\
        gdome-xml-xmlmemory.h		\
	gdome-xml-util.h		\
	gdome-xml-str.h			\
	gdome-xml-text.h		\
	gdome-xml-comment.h		\
	gdome-xml-cdata.h		\
	gdome-xml-attribute.h		\
	gdome-xml-element.h		\
	gdome-xml-document.h		\
	gdome-xml-documentt.h		\
	gdome-xml-documentf.h		\
	gdome-xml-domimpl.h		\
	gdome-xml-nnodem.h    	        \
	gdome-xml-nodel.h		\
	gdome-xml-node.h		\
	gdome-xml-pi.h			\
	gdome-xml-notation.h		\
	gdome-xml-entity.h		\
        gdome-xml-xmlutil.h		\
        gdome-xml-cdatas.h		\
        gdome-xml-entityref.h		\
        gdome-xml-xpns.h		\
	$(NULL)		

# libgdomeincdir = $(includedir)/libgdome

